fast/forms/file/input-file-write-files.html should cover correct setting value https://bugs.webkit.org/show_bug.cgi?id=100085

Patch by Li Yin <li.yin@intel.com> on 2012-10-26
Reviewed by Kentaro Hara.

Source/WebCore:

From Spec: http://dev.w3.org/html5/spec/single-page.html#dom-input-value-filename
On setting, if the new value is the empty string, it must empty the list of selected
files; otherwise, it must throw an InvalidStateError exception.

Test: fast/forms/file/input-file-value.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setValue):
(WebCore):
* html/HTMLInputElement.h:
(HTMLInputElement):
* html/HTMLInputElement.idl:

LayoutTests:

The test input-file-value.html is split from input-file-write-test.html.
And add correct setting value for files attribute, verify the files attribute
is writable or not.

* fast/forms/file/input-file-value-expected.txt: Added.
* fast/forms/file/input-file-value.html: Added.
* fast/forms/file/input-file-write-files-expected.txt:
* fast/forms/file/input-file-write-files.html:

Canonical link: https://commits.webkit.org/118510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132599 268f45cc-cd09-0410-ab3c-d52691b4dbfc